testcases/pos/batch/if_readonly.tig
for i := 0 to 10 do
    (if i
    then i
    else i;
    ())
