testcases/neg/sem/test50.tig
/* error: for with assign-to-index violation */
for i := 0 to 100 do (i := 1; ())
